23 Sept 2020 midday push

--- a/03-API-Fundamentals/4-Apps/01-New-York-Times/nyt.css
+++ b/03-API-Fundamentals/4-Apps/01-New-York-Times/nyt.css
@@ -2,6 +2,11 @@ body {
   font-family: sans-serif;
 }
 
+.theHeadline {
+  font: "times new roman";
+  font-weight: bold;
+}
+
 .wrapper {
   width: 80%;
   margin: 0 auto;
