--- a/Other/API_Challenge01/api_challenge01.css
+++ b/Other/API_Challenge01/api_challenge01.css
@@ -2,6 +2,16 @@ body {
   max-width: 900px
 }
 
+.interactives-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: auto;
+  width: auto;
+  margin: auto;
+  align-items: center;
+}
+
 .buttons-container {
   display: flex;
   flex-direction: row;
@@ -18,17 +28,14 @@ body {
   border: thin solid black;
   height: 20px;
   width: 20px;
-
 }
 
 .less {
   float: left;
-
 }
 
 .more {
   float: right;
-
 }
 
 .qtyOfFacts{
@@ -38,5 +45,9 @@ body {
   font-weight: bold;
   position: relative;
   margin: auto;
-  
+  }
+
+div {
+  border: thin red solid;
+  margin: 10px;
 }
