20 Oct 2020 EOD push

--- a/react-fundamentals/src/App.css
+++ b/react-fundamentals/src/App.css
@@ -81,6 +81,10 @@ ul {
   margin-top: 0.8em!important;
 }
 
+.displayCard {
+  border: thin black solid;
+  width: 360px;
+}
 
 /*   ORIGINAL CSS CODE
 .App {
