23 Oct 2020 EOD push

--- a/ToDoApp/client/src/App.css
+++ b/ToDoApp/client/src/App.css
@@ -5,4 +5,14 @@
 
 .roomToBreathe {
   padding-right: 20px;
+
+}
+
+.authForm {
+  max-width: 400px;
+  margin: auto;
+  padding: 20px;
+  border: thin solid lightgray;
+  background-color: white;
+
 }
